# C--Assign6

./: .gitignore  CMakeLists.txt
include/: StringFunctions.h
src/: StringApp.cpp  StringFunctions.cpp
tests/: CMakeLists.txt  StringFunctions_tests.cpp
